tests/typec-test/test_out/vec.txt
error: invalid scope item type
 --> vec/root.ctl:6:5
  |
6 |     vec.push(0)
  |     ^^^ here
  |
  = info: expected variable or enum, got module

error: invalid scope item type
 --> vec/root.ctl:7:6
  |
7 |     *vec.get(0)
  |      ^^^ here
  |
  = info: expected variable or enum, got module

info: tir repr of functions:


